[gd_scene load_steps=21 format=2]

[ext_resource path="res://worlds/world_ice/WorldIce.gd" type="Script" id=1]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0909.PNG" type="Texture" id=2]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0910.PNG" type="Texture" id=3]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0911.PNG" type="Texture" id=4]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0913.PNG" type="Texture" id=5]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0912.PNG" type="Texture" id=6]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_0916.PNG" type="Texture" id=7]
[ext_resource path="res://worlds/world_ice/backgrounds/IMG_1003.PNG" type="Texture" id=8]
[ext_resource path="res://components/ParallaxSprite.gd" type="Script" id=9]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0992.PNG" type="Texture" id=10]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0993.PNG" type="Texture" id=11]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0994.PNG" type="Texture" id=12]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0998.PNG" type="Texture" id=13]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0996.PNG" type="Texture" id=14]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0995.PNG" type="Texture" id=15]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0990.PNG" type="Texture" id=16]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0989.PNG" type="Texture" id=17]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0991.PNG" type="Texture" id=18]
[ext_resource path="res://worlds/world_ice/polar_lights/IMG_0997.PNG" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="WorldIce" type="Node2D"]
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
script = ExtResource( 9 )
time = 300

[node name="Clouds" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.290196 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 9 )
time = 270

[node name="Dust" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.717647 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 9 )
time = 260

[node name="PolarLights" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="Tween" type="Tween" parent="PolarLights"]

[node name="PolarLightsTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Mountains1" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.572549 )
texture = ExtResource( 6 )
centered = false
script = ExtResource( 9 )
time = 200

[node name="Mountains2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
texture = ExtResource( 5 )
centered = false
script = ExtResource( 9 )
time = 150

[node name="Lights" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
script = ExtResource( 9 )
time = 100

[node name="Ice" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
script = ExtResource( 9 )
time = 60

[connection signal="animation_finished" from="PolarLights" to="." method="_on_PolarLights_animation_finished"]
[connection signal="timeout" from="PolarLightsTimer" to="." method="_on_LightsTimer_timeout"]
